# knot

./: Knot.files  configure.ac
src/: Makefile.am
src/common/: hhash.c
src/common-knot/: hhash.c
src/common-knot/hattrie/: hat-trie.c  hat-trie.h
src/common/trie/: hat-trie.c  hat-trie.h
src/knot/: main.c
src/knot/conf/: cf-lex.l  cf-parse.y  conf.c  conf.h  confdb.c  extra.c  extra.h  includes.c  scheme.h
src/knot/ctl/: knotc_main.c  remote.c
src/knot/dnssec/: nsec-chain.c  nsec-chain.h  nsec3-chain.c  nsec3-chain.h  policy.c  policy.h  zone-events.c  zone-events.h  zone-nsec.c  zone-nsec.h  zone-sign.c  zone-sign.h
src/knot/modules/: synth_record.c
src/knot/nameserver/: axfr.c  axfr.h  internet.c  internet.h  ixfr.c  notify.c  nsec_proofs.c  process_query.c  process_query.h  update.c
src/knot/server/: journal.c  journal.h  server.c
src/knot/updates/: apply.c  apply.h  changesets.c  changesets.h  ddns.c  zone-lock.c  zone-lock.h  zone-read.c  zone-read.h  zone-update.c  zone-update.h
src/knot/zone/: adjust.c  adjust.h  contents.c  contents.h  events.c  node-ref.c  node-ref.h  node.c  node.h  semantic-check.c  semantic-check.h  zone-diff.c  zone-diff.h  zone-dump.c  zone-dump.h  zone-load.c  zone-load.h  zone-tree.c  zone-tree.h  zone.c  zone.h  zonedb-load.c  zonefile.c  zonefile.h
src/knot/zone/events/: events.c  events.h  (+2 more)
src/libknot/: errcode.c  errcode.h  rrset.h
src/libknot/internal/: hhash.c
src/libknot/rrtype/: nsec3.c  nsec3.h  nsec3param.h
src/utils/knsec3hash/: knsec3hash_main.c
src/utils/nsec3hash/: nsec3hash_main.c
(+10 files in other folders)
